<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ydo4ki</groupId>
    <artifactId>MovLang</artifactId>
    <version>1.0</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!--<dependency>
            <groupId>com.squareup</groupId>
            <artifactId>javapoet</artifactId>
            <version>1.13.0</version>
        </dependency>-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.28</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>


        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>9.6</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-commons</artifactId>
            <version>9.6</version>
        </dependency>
        <!-- <dependency>
           <groupId>org.bytedeco</groupId>
           <artifactId>opencv</artifactId>
           <version>4.5.3-1.5.6</version>
       </dependency>-->
       <!-- https://mvnrepository.com/artifact/org.bytedeco/llvm -->
        <!-- <dependency>
           <groupId>org.bytedeco</groupId>
           <artifactId>llvm</artifactId>
           <version>17.0.6-1.5.10</version>
       </dependency>-->
       <!-- https://mvnrepository.com/artifact/org.bytedeco/llvm-platform -->
        <!-- <dependency>
           <groupId>org.bytedeco</groupId>
           <artifactId>llvm-platform</artifactId>
           <version>17.0.6-1.5.10</version>
       </dependency>-->


    </dependencies>

</project>